--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "plotly.js-dist-min": "^3.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-plotly.js": "^2.6.0"
+    "react-plotly.js": "^2.6.0",
+    "react-zoom-pan-pinch": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
